# marketlab

./: .gitignore  HANDOFF.md  OPEN_ISSUES.md  config.json  marketlab_status.json  marketlab_status_plus.json  marketlab_status_report.md
altdata-web-signals/: .gitignore  AGENTS.md  CHECKLIST.md  README.md  RUNBOOK.md  feeds.example.yaml  pyproject.toml  requirements-dev.txt
altdata-web-signals/reports/: cross_correlation_lags.csv  quick_signal_analysis.py  rolling_signal_correlations.csv  signal_correlations_global.csv  visualize_dataset.py
altdata-web-signals/scripts/: run_research_demo.py
altdata-web-signals/src/altdata_web_signals/: __init__.py  cli.py  config.py  core.py  dataset.py  http.py  sentiment.py  storage.py  transforms.py
altdata-web-signals/src/altdata_web_signals.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
altdata-web-signals/tests/: test_dataset_builder.py  test_fng_parser.py  test_onchain.py  test_reddit_parser.py  test_rss_crypto_parser.py  test_rss_parser.py  test_sentiment.py  test_trends_btc_parser.py  test_wikipedia_parser.py
altdata-web-signals/tests/fixtures/: defillama_eth_tvl_sample.json  fng_sample.json  mempool_fee_blocks_sample.json  mempool_sample.json  reddit_sample.json  rss_crypto_sample.xml  rss_sample.xml  stablecoin_usdt_sample.json  trends_btc_sample.json  wikipedia_sample.json
altdata-web-signals/tools/: build_research_ready.py  fetch_btc_1d_yfinance.py
correlation-engine/: AGENTS.md  CHECKLIST.md  README.md  RUNBOOK.md  pyproject.toml
correlation-engine/.venv311/: pyvenv.cfg
correlation-engine/reports/20260226T192523_200Z_returns_1d_30lag_71ff8b4a_seed42/: README.md  summary.json
correlation-engine/reports/20260226T194255_213Z_returns_1d_30lag_71ff8b4a_seed42/: README.md  summary.json
correlation-engine/reports/20260227T002847_325Z_returns_1d_5lag_cc4a2bf3_seed42/: README.md  summary.json
correlation-engine/reports/20260227T002853_300Z_returns_1d_5lag_c3ad9128_seed42/: README.md  summary.json
correlation-engine/reports/20260227T003030_447Z_returns_1d_30lag_71ff8b4a_seed42/: README.md  summary.json
correlation-engine/reports/20260227T010556_872Z_returns_1d_5lag_bcebc7df/: README.md  summary.json
correlation-engine/reports/20260227T010600_100Z_returns_1d_30lag_71ff8b4a/: README.md  summary.json
correlation-engine/reports/20260227T010608_676Z_returns_1d_5lag_87a1e24e/: summary.json
correlation-engine/reports/20260227T010714_886Z_returns_1d_30lag_71ff8b4a/: README.md  summary.json
correlation-engine/reports/20260227T010726_656Z_returns_1d_5lag_87a1e24e/: summary.json
correlation-engine/reports/20260227T010743_822Z_returns_1d_5lag_fc718f9a/: summary.json  traceback.txt
correlation-engine/reports/20260227T010757_266Z_returns_1d_5lag_fc718f9a/: summary.json  traceback.txt
correlation-engine/reports/20260227T010912_698Z_returns_1d_5lag_fc718f9a/: summary.json  traceback.txt
correlation-engine/reports/20260227T010919_481Z_returns_1d_5lag_fc718f9a/: summary.json  traceback.txt
correlation-engine/reports/20260227T010927_971Z_returns_1d_5lag_fc718f9a/: README.md  summary.json
correlation-engine/reports/20260227T010934_862Z_returns_1d_5lag_87a1e24e/: README.md  summary.json
correlation-engine/reports/20260227T010947_215Z_returns_1d_30lag_71ff8b4a/: README.md  summary.json
correlation-engine/reports/20260227T013535_077Z_returns_1d_5lag_87a1e24e/: README.md  summary.json
correlation-engine/reports/20260227T013635_367Z_returns_1d_5lag_87a1e24e/: README.md  summary.json
correlation-engine/reports/20260227T073217_288Z_returns_1d_5lag_87a1e24e/: README.md  summary.json
correlation-engine/reports/20260227T074153_595Z_returns_1d_30lag_71ff8b4a/: README.md  summary.json
correlation-engine/reports/20260227T082910_305Z_returns_1d_5lag_87a1e24e/: README.md  summary.json
correlation-engine/reports/20260227T144802_658Z_returns_1d_5lag_80063728/: README.md  summary.json
correlation-engine/reports/20260227T152851_848Z_returns_1d_5lag_2b7f0314/: README.md  summary.json
correlation-engine/reports/20260227T155346_635Z_returns_1d_5lag_2b7f0314/: README.md  summary.json
correlation-engine/reports/20260228T231042_591Z_returns_1d_30lag_e7643153/: README.md  summary.json
correlation-engine/reports/20260228T231244_845Z_returns_1w_8lag_43402913/: README.md  summary.json
correlation-engine/reports_check/20260227T013526_593Z_returns_1d_30lag_71ff8b4a/: README.md  summary.json
correlation-engine/scripts/: run_smoke.py
correlation-engine/tests/: test_manifest_validation.py  test_synthetic_lag.py
degen-scanner/: pyproject.toml
degen-scanner/config/: chains.yaml  settings.py  universe_policy.yaml  wallet_registry.yaml
degen-scanner/tests/: test_builders.py  test_fetchers.py  test_research.py  test_smart_money.py  test_universe.py
forecasting-backtest/: .gitignore  AGENTS.md  CHECKLIST.md  Makefile  README.md  RUNBOOK.md  pyproject.toml  requirements-dev.txt
forecasting-backtest/configs/: default.yaml
forecasting-backtest/scripts/: bootstrap.sh  prepare_btc_trends.py  run_btc_trends_backtest.py  run_demo.py  run_demo.sh
forecasting-backtest/tests/: test_expanding_walkforward.py  test_forecast_pipeline.py
market-data-ingest/: .gitignore  AGENTS.md  CHECKLIST.md  Makefile  README.md  RUNBOOK.md  patch.diff  patch.tmp  patch2.diff  patch3.diff  patch4.diff  patch5.diff  pyproject.toml
market-data-ingest/scripts/: fetch_btcusd_prices.py  make_demo_prices.py
market-data-ingest/tests/: test_connectors_cli_quality.py  test_ingest_manifest.py  test_normalization.py  test_quality_report_integration.py  test_storage_atomic_write.py  test_storage_validation.py  test_warehouse_upsert.py
marketlab-core/: AGENTS.md  CHECKLIST.md  README.md  RUNBOOK.md  pyproject.toml
marketlab-core/.venv311/: pyvenv.cfg
marketlab-core/docs/: artifacts.md  contracts.md
marketlab-core/examples/: quickstart.py  smoke_pipeline.py
marketlab-core/tests/: test_contracts.py  test_manifests.py  test_propertyish.py  test_timeseries.py
(+2285 files in other folders)
