[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "correlation-engine"
version = "0.1.0"
description = "Quantitative correlation engine for signal/target time-series relationships"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "polars>=0.20",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "pyarrow>=14",
  "marketlab-core>=0.1.0"
]

[project.scripts]
corr = "correngine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["correngine*"]
